# score-addon-hdf5

./: .gitmodules  CMakeLists.txt  README.md  addon.json  release.sh  score_addon_datareader.cpp  score_addon_datareader.hpp
.github/workflows/: builds-dev.yaml  builds-sdk.yaml  builds.yaml  portability.yml
DataReader/: CommandFactory.hpp  DataReaderModel.cpp  DataReaderModel.hpp  DropCSV.cpp  DropCSV.hpp  DropHDF5.cpp  DropHDF5.hpp  HDF5Audio.cpp  HDF5Audio.hpp  HDF5DataReader.cpp  HDF5DataReader.hpp  HDF5Ports.cpp  HDF5Ports.hpp  HDF5Texture.cpp  HDF5Texture.hpp  IncludeH5.hpp
